--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -10,6 +10,10 @@ dependencies:
     sdk: flutter
   cupertino_icons: ^1.0.2
   csv: ^5.0.1
+  provider: ^6.0.4
+  enhanced_containers: ^0.1.0
+  graphic: ^1.0.0
+  intl: ^0.17.0
 
 dev_dependencies:
   flutter_test:
